docs:seed empty pages

--- a/pages/docs/plugins.mdx
+++ b/pages/docs/plugins.mdx
@@ -1,3 +1,7 @@
-# plugins
+import { Callout } from 'vocs/components'
 
-This is an plugins page.
+# Plugins
+
+<Callout type="info">
+    WIP
+</Callout>
