--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -25,12 +25,14 @@ import { HomePage } from 'vocs/components'
 </div>
 
 {/* Ecosystem Partners Section */}
-<div className="py-32 text-white rounded-[8px] ">
+<div className="py-32 ">
   <div className="max-w-[1120px] mx-auto px-[24px] md:px-0">
     <h2 className="text-3xl font-bold text-center mb-4">Ecosystem Partners</h2>
     <p className="text-[21px] max-sm:text-[18px] text-[#919193] text-center mb-12 max-w-2xl mx-auto">Join the growing network of projects building on Mycelium</p>
     <div className="grid gap-8">
-      <div className="h-16 flex items-center justify-center"><img className="h-[80px] max-sm:h-[60px]" src="/partners/ecofundme.svg" alt="mycelium logo" /></div>
+      <div className="h-16 flex items-center justify-center">
+          <img className="h-[80px] max-sm:h-[60px]" src="/EcoFundMe.svg" alt="EcoFundMe" />
+      </div>
     </div>
   </div>
 </div>
