--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,5 @@
 ---
-title: mycelium · fast, modular, extensible crypto-native AI agent platform written in Rust
-content:
+title: mycelium · fast, modular, extensible regenerative finance layer-2 blockchain
   width: 100%
 layout: landing
 showLogo: true
