add partners and update block explorer and policies

--- a/pages/docs/ecosystem.mdx
+++ b/pages/docs/ecosystem.mdx
@@ -2,6 +2,37 @@ import { Callout } from 'vocs/components'
 
 # Ecosystem
 
+<div className="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 items-center justify-items-center py-8">
+  <div className="flex flex-col items-center">
+    <img src="/logos/unicef.png" alt="UNICEF" className="h-22 w-auto" />
+    <span className="mt-2 text-sm text-gray-600">UNICEF</span>
+  </div>
+  <div className="flex flex-col items-center">
+    <img src="/logos/polymer.svg" alt="Polymer" className="h-22 w-auto" />
+    <span className="mt-2 text-sm text-gray-600">Polymer</span>
+  </div>
+  <div className="flex flex-col items-center">
+    <img src="/logos/lucid.png" alt="Lucid" className="h-22 w-auto rounded-full invert" />
+    <span className="mt-2 text-sm text-gray-600">Lucid</span>
+  </div>
+  <div className="flex flex-col items-center">
+    <img src="/logos/avail.png" alt="Avail" className="h-22 w-auto" />
+    <span className="mt-2 text-sm text-gray-600">Avail</span>
+  </div>
+  <div className="flex flex-col items-center">
+    <img src="/logos/othentic.png" alt="Othentic Labs" className="h-22 w-auto" />
+    <span className="mt-2 text-sm text-gray-600">Othentic Labs</span>
+  </div>
+  <div className="flex flex-col items-center">
+    <img src="/logos/zns-connect.png" alt="ZNS Connect" className="h-22 w-auto" />
+    <span className="mt-2 text-sm text-gray-600">ZNS Connect</span>
+  </div>
+  <div className="flex flex-col items-center">
+    <img src="/logos/eigen-layer.png" alt="Eigen Layer" className="h-22 w-auto" />
+    <span className="mt-2 text-sm text-gray-600">Eigen Layer</span>
+  </div>
+</div>
+
 <Callout type="info">
-    WIP
+  Our ecosystem is growing! We're proud to partner with these innovative organizations to build the future of decentralized identity and data management.
 </Callout>
