--- a/pages/docs/tools/block-explorers.mdx
+++ b/pages/docs/tools/block-explorers.mdx
@@ -2,6 +2,11 @@ import { Callout } from 'vocs/components'
 
 # Block Explorers
 
-<Callout type="info">
-    WIP
-</Callout>
+The Mycelium block explorer provides tools to help you debug smart contracts and transactions:
+
+- View, verify, and interact with smart contract source code
+- View detailed transaction information
+
+## Available Networks
+
+- **Testnet**: [explorer.myceliumlabs.xyz](https://explorer.myceliumlabs.xyz)
